--- a/educa/locale/es/LC_MESSAGES/django.po
+++ b/educa/locale/es/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-26 20:04-0600\n"
-"PO-Revision-Date: 2024-11-26 20:05+0000\n"
+"POT-Creation-Date: 2024-11-27 10:16-0600\n"
+"PO-Revision-Date: 2024-11-27 10:16+0000\n"
 "Last-Translator:   <jgonzalez19@buffs.wtamu.edu>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -20,13 +20,54 @@ msgstr ""
 "X-Translated-Using: django-rosetta 0.10.1\n"
 
 #: .\chat\templates\chat\room.html:4
-#| msgid "Course chat room"
 msgid "Chat room for"
 msgstr "Sala de chat del curso"
 
 #: .\chat\templates\chat\room.html:22
 msgid "Send"
 msgstr "Enviar"
+
+#: .\chat\urls.py:9
+msgid "room/<int:course_id>/"
+msgstr "sala/<int:course_id>/"
+
+#: .\courses\models.py:11 .\courses\models.py:32 .\courses\models.py:55
+#: .\courses\models.py:93 .\courses\models.py:147
+msgid "title"
+msgstr "título"
+
+#: .\courses\models.py:34
+msgid "overview"
+msgstr "resumen"
+
+#: .\courses\models.py:35 .\courses\models.py:94 .\courses\models.py:149
+msgid "created"
+msgstr "creado"
+
+#: .\courses\models.py:56
+msgid "description"
+msgstr "descripción"
+
+#: .\courses\models.py:79 .\courses\models.py:146
+msgid "object_id"
+msgstr "id_objeto"
+
+#: .\courses\models.py:95
+msgid "updated"
+msgstr "contenido"
+
+#: .\courses\models.py:111
+msgid "content"
+msgstr "contenido"
+
+#: .\courses\models.py:112 .\courses\models.py:116 .\courses\models.py:120
+#: .\courses\models.py:125
+msgid "file"
+msgstr "archivo"
+
+#: .\courses\models.py:124
+msgid "url"
+msgstr "url"
 
 #: .\courses\templates\base.html:17
 msgid "Language"
@@ -237,6 +278,10 @@ msgstr "para ver un curso diferente"
 msgid "Module"
 msgstr "Módulo"
 
+#: .\courses\templates\courses\manage\module\content_list.html:11
+msgid "Course"
+msgstr "Curso"
+
 #: .\courses\templates\courses\manage\module\content_list.html:13
 #: .\students\templates\students\course\detail.html:14
 msgid "Modules"
@@ -320,6 +365,70 @@ msgstr ""
 msgid "Please, use the following form to log-in"
 msgstr "Por favor, utilice el siguiente formulario para iniciar sesión"
 
+#: .\courses\urls.py:7 .\students\urls.py:8
+msgid "content/order/"
+msgstr "contenido/orden/"
+
+#: .\courses\urls.py:12
+msgid "content/<int:id>/delete/"
+msgstr "contenido/<int:id>/borrar/"
+
+#: .\courses\urls.py:17
+msgid "create/"
+msgstr "crear/"
+
+#: .\courses\urls.py:22
+msgid "mine/"
+msgstr "mío/"
+
+#: .\courses\urls.py:27
+msgid "module/order/"
+msgstr "módulo/orden/"
+
+#: .\courses\urls.py:32
+msgid "module/<int:module_id>/content/<model_name>/create/"
+msgstr "módulo/<int:module_id>/contenido/<model_name>/crear/"
+
+#: .\courses\urls.py:37
+msgid "module/<int:module_id>/content/<model_name>/<id>/"
+msgstr "módulo/<int:module_id>/contenido/<model_name>/<id>/"
+
+#: .\courses\urls.py:42
+msgid "module/<int:module_id>/"
+msgstr "módulo/<int:module_id>/"
+
+#: .\courses\urls.py:47
+msgid "subject/<slug:subject>/"
+msgstr "tema/<slug:subject>/"
+
+#: .\courses\urls.py:52
+msgid "subject/<slug:subject>"
+msgstr "tema/<slug:subject>"
+
+#: .\courses\urls.py:57
+msgid "<slug:slug>/"
+msgstr "<slug:slug>/"
+
+#: .\courses\urls.py:62
+msgid "<pk>/edit/"
+msgstr "<pk>/editar/"
+
+#: .\courses\urls.py:67
+msgid "<pk>/delete/"
+msgstr "<pk>/borrar/"
+
+#: .\courses\urls.py:72
+msgid "<pk>/module/"
+msgstr "<pk>/módulo/"
+
+#: .\courses\urls.py:77
+msgid "<pk>/work/<work_id>/"
+msgstr "<pk>/trabajo/<work_id>/"
+
+#: .\courses\urls.py:82
+msgid "<pk>/work/"
+msgstr "<pk>/trabajo/"
+
 #: .\educa\settings.py:129
 msgid "English"
 msgstr "Inglés"
@@ -327,6 +436,38 @@ msgstr "Inglés"
 #: .\educa\settings.py:130
 msgid "Spanish"
 msgstr "Español"
+
+#: .\educa\urls.py:27
+msgid "accounts/login/"
+msgstr "cuentas/iniciar-sesión/"
+
+#: .\educa\urls.py:28
+msgid "accounts/logout/"
+msgstr "cuentas/cerrar-sesión/"
+
+#: .\educa\urls.py:29
+msgid "admin/"
+msgstr "admin/"
+
+#: .\educa\urls.py:30
+msgid "api/"
+msgstr "api/"
+
+#: .\educa\urls.py:31
+msgid "chat/"
+msgstr "chat/"
+
+#: .\educa\urls.py:32
+msgid "course/"
+msgstr "curso/"
+
+#: .\educa\urls.py:33
+msgid "rosetta/"
+msgstr "rosetta/"
+
+#: .\educa\urls.py:34
+msgid "students/"
+msgstr "estudiantes/"
 
 #: .\students\templates\students\course\detail.html:32
 msgid "Course chat room"
@@ -372,3 +513,43 @@ msgstr "Introduce tus datos para crear una cuenta"
 #: .\students\templates\students\student\registration.html:17
 msgid "Create my account"
 msgstr "Crear mi cuenta"
+
+#: .\students\urls.py:13
+msgid "courses/"
+msgstr "cursos/"
+
+#: .\students\urls.py:18
+msgid "course/<pk>/work/content/<model_name>/create/"
+msgstr "curso/<pk>/trabajo/contenido/<model_name>/crear/"
+
+#: .\students\urls.py:23
+msgid "course/<pk>/work/content/<model_name>/<id>/"
+msgstr "curso/<pk>/trabajo/contenido/<model_name>/<id>/"
+
+#: .\students\urls.py:28
+msgid "course/<pk>/work/<work_id>/"
+msgstr "curso/<pk>/trabajo/<work_id>/"
+
+#: .\students\urls.py:33
+msgid "course/<pk>/work/"
+msgstr "curso/<pk>/trabajo/"
+
+#: .\students\urls.py:38
+msgid "course/<pk>/"
+msgstr "curso/<pk>/"
+
+#: .\students\urls.py:43
+msgid "course/<pk>/<module_id>/"
+msgstr "curso/<pk>/<module_id>/"
+
+#: .\students\urls.py:49
+msgid "enroll-course"
+msgstr "inscribir-curso"
+
+#: .\students\urls.py:54
+msgid "register/"
+msgstr "registrar/"
+
+#, fuzzy
+#~ msgid "subject"
+#~ msgstr "Temas"
